<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacts_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    tools:context="ro.pub.cs.systems.eim.lab04.contactsmanager.ContactsManagerActivity">

    <Button
        android:id="@+id/showFieldsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showAdditionalField"
        android:onClick="showAdditionalFields"
        android:layout_gravity="right"
        />

    <!--<ScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->

    <!--&gt;-->

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/numberPhoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/numberHint"
            android:inputType="number" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/emailHint" />

        <EditText
            android:id="@+id/addressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/addressHint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveBtnText" />


            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelBtnText" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/additionalFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >


            <EditText
                android:id="@+id/jobEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jobHint" />


            <EditText
                android:id="@+id/companyEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/companyHint" />

            <EditText
                android:id="@+id/websiteEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/websiteHint" />

            <EditText
                android:id="@+id/imEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/IMHint" />


        </LinearLayout>
        <!--</ScrollView>-->
    </LinearLayout>
</LinearLayout>
